Styling changes + fixed issue where overflow text was on two lines inside InfoBlock and dark mode button

--- a/src/index.css
+++ b/src/index.css
@@ -4,22 +4,22 @@ body, html {
 
     font-size: 1.7vh;
 
-    --font-color: white;
-    --child-component-color: rgb(37,68,65);
-    --child-component-hover-color: rgb(119, 255, 214);
-    --navbar-strip-color: rgb(28,254,186);
+    --main-color: rgb(30,31,38);
+    --secondary-color: white;
+    --accent-color: rgb(119, 255, 214);
 
-    --main-page-color: white;
+    --navbar-color: rgb(30,31,38);
+
     --global-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body.dark-mode {
-    --child-component-color: rgb(77,100,141);
-    --child-component-hover-color: rgb(129, 240, 255);
-    --main-page-color: rgb(30,31,38);
-    --font-color: rgb(30,31,38);
 
-    --navbar-strip-color: rgb(28, 228, 254);
+    --main-color: white;
+    --secondary-color: rgb(30,31,38);
+    --accent-color: rgb(255, 197, 39);
+
+    --navbar-color: rgb(30,31,38);
 
 }
 
@@ -27,10 +27,18 @@ body.dark-mode {
     width: 100%;
     height: 4vh;
     /* min-height: 40px; */
-    background-color: var(--child-component-color);
+    background-color: var(--navbar-color);
 
     display: flex;
     justify-content: right;
+
+    transition: background-color 0.3s;
+}
+
+
+.NavBarStrip {
+    height: 1vh;
+    background-color: var(--accent-color);
 
     transition: background-color 0.3s;
 }
@@ -40,34 +48,28 @@ body.dark-mode {
     /* min-height: 30px; */
     margin-right: 0.5vh; 
     margin-top: 0.5vh; 
-    
+
+    white-space: nowrap;
+    overflow: hidden;
+
     border-style: solid;
     border-width: 3px;
-    background-color: var(--child-component-color);
-    color: var(--navbar-strip-color);
-    border-color: var(--navbar-strip-color);
-    border-radius: 10px;
+    background-color: var(--main-color);
+    color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    border-radius: 0px;
 
     cursor: pointer;
 
     -webkit-user-select: none; /* Safari */
     user-select: none;
 
-    transition: background-color 0.3s, border-radius 0.3s;
+    transition: background-color 0.3s, border-radius 0.3s, width 0.3s;
 
 }
 
 .DarkModeButton:hover {
-    border-radius: 0px;
-
-    transition: background-color 0.3s, border-radius 0.3s;
-}
-
-.NavBarStrip {
-    height: 1vh;
-    background-color: var(--navbar-strip-color);
-
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, border-radius 0.3s, width 0.3s;
 }
 
 .MainPage {
@@ -79,7 +81,7 @@ body.dark-mode {
     justify-content: center;
     flex-direction: column;
 
-    background-color: var(--main-page-color);
+    background-color: var(--secondary-color);
 
     transition: background-color 0.3s;
 }
@@ -92,15 +94,19 @@ body.dark-mode {
 
     margin: 0 0 30px 0;
 
-    border-radius: 5px;
-    background-color: var(--child-component-color);
-    color: var(--font-color);
+    white-space: nowrap;
+    overflow: hidden;
+
+    /* border-radius: 5px; */
+    background-color: var(--secondary-color);
+    color: var(--main-color);
+    border-style: solid;
+    border-color: var(--main-color);
 
     display: flex;
     align-items: center;
 
     font-family: var(--global-font);
-    color:var(--font-color);
 
     -webkit-user-select: none; /* Safari */
     user-select: none;
@@ -117,21 +123,12 @@ body.dark-mode {
 }
 
 .InfoBlock:hover {
-    background-color: var(--child-component-hover-color);
+    background-color: var(--main-color);
+    color: var(--secondary-color);
     transition: width 0.3s, height 0.3s, border-radius 0.3s, background-color 0.2s;
 }
 
-a:link {
+a, a:visited, a:hover, a:active, a:link {
     text-decoration: none !important;
-}
-
-
-
-.BugThatRunsAround {
-    width: 3vw;
-    height: 3vh;
-    position: absolute;
-
-    background-color: var(--navbar-strip-color);
-    border-radius: 50px;
+    color: var(--secondary-color);
 }
